[metadata]
name = pytorch-bsf
version = attr: torch_bsf.__version__
url = https://github.com/rafcc/pytorch-bsf
author = RIKEN AIP-FUJITSU Collaboration Center (RAFCC)
author_email = hmkz@s101.xrea.com
description = PyTorch implementation of Bezier simplex fitting
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
classifiers =
  Development Status :: 3 - Alpha
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Science/Research
  License :: OSI Approved :: MIT License
  Operating System :: POSIX
  Programming Language :: Python
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Software Development
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
packages = find:
include_package_data=true
python_requires = >=3.8
setup_requires =
  setuptools>=30.3.0
  pytest-runner
install_requires =
  setuptools>=21.0.0
  torch
  lightning
  pl-crossvalidate
  torchvision
  protobuf
  mlflow
  jsonschema
  PyYAML

tests_require =
  pytest
  pytest-cov
  pytest-randomly
  mypy
  types-jsonschema
  types-PyYAML
  types-setuptools

[options.extras_require]
develop =
  isort
  black
  tox
  pytest
  pytest-cov
  pytest-randomly
  mypy
  types-jsonschema
  types-PyYAML
  types-setuptools

[options.packages.find]
exclude =
  build
  dist
  docs

[aliases]
test = pytest

[tool:pytest]
addopts =
  --verbose
  --durations=0
  --cov=torch_bsf
  --cov-report=term-missing
  --cov-report=html
  --cov-report=xml
  --doctest-modules
  --junit-xml=pytest.xml
testpaths = tests
python_files = *.py

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
[mypy-mlflow.*]
ignore_missing_imports = True
